2025-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Function.h: Use R_ClosureEnv instead of
	deprecated CLOENV if under R >= 4.5.0

2025-03-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* src/barrier.cpp (dataptr): Replace remaining DATAPTR with
	DATAPTR_RO for suitable R greater than 3.5.0

2025-02-11  Dirk Eddelbuettel  <edd@debian.org>

	* R/Rcpp.package.skeleton.R (Rcpp.package.skeleton): Support optional
	argument 'github_user' to populate URL and BugReports if given
	* man/Rcpp.package.skeleton.Rd: Document new optional argument

	* R/Rcpp.package.skeleton.R (Rcpp.package.skeleton): Default version
	is now '0.0.1' and not '1.0'
	* inst/tinytest/test_rcpp_package_skeleton.R: Adjust test accordingly
	* inst/tinytest/test_expose_class.R: Idem

2025-02-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-01-31  Lev Kandel  <lmakhlis@google.com>

	* inst/include/Rcpp/internal/wrap.h: Add support for std::string_view
	* inst/include/Rcpp/traits/r_type_traits.h: Idem
	* inst/include/Rcpp/traits/wrap_type_traits.h: Idem
	* inst/include/RcppCommon.h: Include <string_view>
	* inst/tinytest/cpp/wrap.cpp: Add unit test for wrap(std::string_view)
	* inst/tinytest/test_wrap.R: Idem

2025-01-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp-libraries.Rdm: Add mention of PACKAGE_types.h
	* vignettes/rmd/Rcpp.bib: Add AsioHeaders
	* inst/bib/Rcpp.bib: Idem

2025-01-18  Ben Bolker  <bolker@mcmaster.ca>

	* inst/NEWS.Rd: fix trivial typos in NEWS file
